--- a/sales_web_mvc/appsettings.json
+++ b/sales_web_mvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sales_web_mvcContext": "Server=(localdb)\\mssqllocaldb;Database=sales_web_mvcContext-993d5262-a4ad-40f4-8b0c-eee0560563de;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
