MySQL adaptation and first migration

--- a/sales_web_mvc/appsettings.json
+++ b/sales_web_mvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sales_web_mvcContext": "Server=(localdb)\\mssqllocaldb;Database=sales_web_mvcContext-993d5262-a4ad-40f4-8b0c-eee0560563de;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "sales_web_mvcContext": "server=localhost;userid=developer;password=123456;database=saleswebmvcappdb"
   }
 }
